Closed Bug 2013652 Opened 7 months ago Closed 7 months ago

Device posture does not report some interfaces, wg0, wwan0 missing

Categories

(Enterprise Products :: General, defect, P1)

x86_64
Linux

Tracking

(Not tracked)

RESOLVED FIXED
Pilot 1

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

54 bytes, text/x-github-pull-request
Details | Review

While riding a train (always the best place to find bugs), WiFi off on my laptop, only LTE modem and wireguard VPN.
Device posture marionette test fails with no network interface.

Attached file GitHub Pull Request
Status: NEW → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Blocks: firefox-client-cp
No longer blocks: firefox-enterprise-cp
Regressions: 2052919
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: