Bug 2013652 - Enterprise: allow missing MAC address when reporting network interfaces