netwerk/system/netlink/NetlinkService.cpp
@@ -277,11 +277,7 @@ class NetlinkLink {
     iface = (ifinfomsg*)NLMSG_DATA(aNlh);
     len = aNlh->nlmsg_len - NLMSG_LENGTH(sizeof(*iface));
 
-    bool shouldStop = false;
     bool hasName = false;
-#if defined(MOZ_ENTERPRISE)
-    bool hasMAC = false;
-#endif
     for (attr = IFLA_RTA(iface); RTA_OK(attr, len);
          attr = RTA_NEXT(attr, len)) {
       if (attr->rta_type == IFLA_IFNAME) {
@@ -291,26 +287,15 @@ class NetlinkLink {
 #if defined(MOZ_ENTERPRISE)
       if (attr->rta_type == IFLA_ADDRESS) {
         memcpy(mMAC, RTA_DATA(attr), ETH_ALEN);
-        hasMAC = true;
       }
 #endif
 
-      shouldStop = hasName
-#if defined(MOZ_ENTERPRISE)
-                   && hasMAC
-#endif
-          ;
-
-      if (shouldStop) {
+      if (hasName) {
         break;
       }
     }
 
-    if (!hasName
-#if defined(MOZ_ENTERPRISE)
-        || !hasMAC
-#endif
-    ) {
+    if (!hasName) {
       return false;
     }
 
